# pokopia-pokedex

./: BORING_README.md  README.md  pyproject.toml
data/: chroma.sqlite3
src/: server.py
