[project]
name = "coppermind"
version = "0.1.0"
description = "Local AI memory - vector-searchable knowledge base via MCP"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "chromadb>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
